WORKFLOWAUTOMATICASSIGNMENT-12 : Add the possibility to include the link to view the directory record in BO
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/directory-form-workflow/module-workflow-automatic-assignment@36481 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/taskautomaticassignment/resources/taskautomaticassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/taskautomaticassignment/resources/taskautomaticassignment_messages_fr.properties
@@ -21,6 +21,11 @@ task_config.label_user_name_comment=Le nom de l'expediteur de la notification
 task_config.label_mailinglist_message=Message
 task_config.label_mailinglist_subject=Objet
 task_config.label_user_name=Nom de l'expediteur
+task_config.label_view_record=Lien visualisation d'une fiche
+task_config.label_view_record_comment=Cochez cette case si vous souhaitez ajouter un lien pour la visualisation d'une fiche.
+task_config.label_freemarker_link_view_record=Synthaxe freemarker a utiliser afin d'afficher le lien : &#36;&#123;link_view_record&#125;
+task_config.label_label_link_view_record=Libell\u00E9 du lien visualisation d'une fiche
+task_config.label_label_link_view_record_comment=Libell\u00E9 du lien pour la visualisation d'une fiche
 modify_entry_assignment.label.value=Valeur
 modify_entry_assignment.label.workgroups=Groupes de travail
 
