WORKFLOWAUTOMATICASSIGNMENT-13 : Add a recipients list for blind carbon copies
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/directory-form-workflow/module-workflow-automatic-assignment@36777 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/taskautomaticassignment/resources/taskautomaticassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/taskautomaticassignment/resources/taskautomaticassignment_messages_fr.properties
@@ -17,18 +17,23 @@ task_config.label_directory_comment=Cliquez sur mettre à jour pour réinitialiser
 task_config.entry_list.label.noentry=Aucune entrée, mettez à jour l'annuaire s'il vous plaît.
 task_config.label_notification=Notifier la liste de diffusion
 task_config.label_mailinglist_sender_name=Nom de l'expediteur
-task_config.label_user_name_comment=Le nom de l'expediteur de la notification
 task_config.label_mailinglist_message=Message
 task_config.label_mailinglist_subject=Objet
 task_config.label_user_name=Nom de l'expediteur
+task_config.label_user_name_comment=Le nom de l'expediteur de la notification
 task_config.label_view_record=Lien visualisation d'une fiche
 task_config.label_view_record_comment=Cochez cette case si vous souhaitez ajouter un lien pour la visualisation d'une fiche.
 task_config.label_freemarker_link_view_record=Synthaxe freemarker a utiliser afin d'afficher le lien : &#36;&#123;link_view_record&#125;
 task_config.label_label_link_view_record=Libell\u00E9 du lien visualisation d'une fiche
 task_config.label_label_link_view_record_comment=Libell\u00E9 du lien pour la visualisation d'une fiche
+task_config.label_recipients_cc=Cc
+task_config.label_recipients_cc_comment=Ajouter les emails, s\u00E9par\u00E9s par un ';', que vous souhaitez avoir en copie 
+task_config.label_recipients_bcc=Cci
+task_config.label_recipients_bcc_comment=Ajouter les emails, s\u00E9par\u00E9s par un ';', que vous souhaitez avoir en copie cach\u00E9e
+task_config.label_mapping_workgroup_mailing_list=Association Groupe de travail/Liste de diffusion
+
 modify_entry_assignment.label.value=Valeur
 modify_entry_assignment.label.workgroups=Groupes de travail
-
 
 #Buttons
 task_config.update_button=Mettre à jour
