--- a/src/java/fr/paris/lutece/plugins/workflow/modules/taskautomaticassignment/resources/taskautomaticassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/taskautomaticassignment/resources/taskautomaticassignment_messages_fr.properties
@@ -31,6 +31,9 @@ task_config.label_recipients_cc_comment=Ajouter les emails, s\u00E9par\u00E9s pa
 task_config.label_recipients_bcc=Cci
 task_config.label_recipients_bcc_comment=Ajouter les emails, s\u00E9par\u00E9s par un ';', que vous souhaitez avoir en copie cach\u00E9e
 task_config.label_mapping_workgroup_mailing_list=Association Groupe de travail/Liste de diffusion
+task_config.label_entry_file=Pi\u00E8ces \u00E0 joindre au message
+task_config.label_file_checked=
+task_config.label_file_name=Entr\u00E9e de l'annuaire de r\u00E9f\u00E9rence
 
 modify_entry_assignment.label.value=Valeur
 modify_entry_assignment.label.workgroups=Groupes de travail
