WORKFLOWAUTOMATICASSIGNMENT-21 : Refactoring workflow
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/directory-form-workflow/module-workflow-automatic-assignment@40699 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/automaticassignment/resources/automaticassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/automaticassignment/resources/automaticassignment_messages_fr.properties
@@ -1,5 +1,5 @@
-plugin.description=Module workflow automatic assignment
-plugin.provider=Mairie de Paris
+module.description=Module workflow automatic assignment
+module.provider=Mairie de Paris
 
 #Titles
 task_title=Affectation automatique
