WORKFLOWAUTOMATICASSIGNMENT-26 : Add comments and change labels for task Automatic assignment
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/directory-form-workflow/module-workflow-automatic-assignment@44530 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/automaticassignment/resources/automaticassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/automaticassignment/resources/automaticassignment_messages_fr.properties
@@ -14,6 +14,7 @@ task_config.label.freemarker=Marqueurs
 task_config.full_entry_list.title=Liste des marqueurs
 task_config.label_directory=Choix de l'annuaire
 task_config.label_directory_comment=Cliquez sur mettre à jour pour réinitialiser la liste des entrées
+task_config.label_directory_comment_assign=Vous pouvez affecter une fiche \u00E0 un groupe sur un crit\u00E8re pr\u00E9sent dans votre annuaire (case \u00E0 cocher, bouton radio, liste d\u00E9roulante...).
 task_config.entry_list.label.noentry=Aucune entrée, mettez à jour l'annuaire s'il vous plaît.
 task_config.label_notification=Notifier la liste de diffusion
 task_config.label_mailinglist_sender_name=Nom de l'expediteur
@@ -36,7 +37,9 @@ task_config.label_file_checked=
 task_config.label_file_name=Entr\u00E9e de l'annuaire de r\u00E9f\u00E9rence
 
 modify_entry_assignment.label.value=Valeur
+modify_entry_assignment.label.entry_value=Valeur du champ
 modify_entry_assignment.label.workgroups=Groupes de travail
+modify_entry_assignment.label.comment=Associer une valeur d'un champ à un groupe de travail pour l'affectation automatique.
 
 #Buttons
 task_config.update_button=Mettre à jour
